# ocaml-freestanding-nolibc

./: .gitignore  Makefile  README.md  configure.sh  install.sh  ocaml-freestanding-nolibc.opam  ocaml-freestanding-nolibc.pc  solo5-libc.opam  solo5-libc.pc  uninstall.sh
