opam-version: "2.0"
maintainer: "Martin Lucina <martin@lucina.net>"
authors: "Martin Lucina <martin@lucina.net>"
homepage: "https://github.com/mirage/ocaml-freestanding"
bug-reports: "https://github.com/mirage/ocaml-freestanding/issues/"
license: "MIT"
tags: "org:mirage"
dev-repo: "git+https://github.com/mirage/ocaml-freestanding.git"
build: [
  [ "./configure.sh" "--prefix=%{prefix}%" "--toolchain=static" { solo5-config-ocaml-static:installed } ]
  [ make ]
]
install: [ make "install" ]
depends: [
  "solo5" { >= "0.7.0" }
  "solo5-config-ocaml-static" { >= "0.7.0" }
]
available: [
  ((os = "linux" & (arch = "x86_64" | arch = "arm64"))
  | (os = "freebsd" & arch = "x86_64")
  | (os = "openbsd" & arch = "x86_64"))
]
synopsis: "Freestanding libc"
description:
  "This package provides a freestanding libc."
pin-depends: [
  ["solo5.0.7.0" "git+https://github.com/mato/solo5#split-packages"]
  ["solo5-bindings-hvt.0.7.0" "git+https://github.com/mato/solo5#split-packages"]
  ["solo5-config-ocaml-static.0.7.0" "git+https://github.com/mato/solo5#split-packages"]
]
